[package]
name = "ring-alloc"
version = "0.2.0"
edition = "2018"
authors = ["Zakarum <zaq.dev@icloud.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ring-alloc"
homepage = "https://github.com/zakarumych/ring-alloc"
repository = "https://github.com/zakarumych/ring-alloc"
readme = "README.md"
description = "Specialized allocator for short-living objects"
keywords = ["allocator", "alloc", "concurrent", "no-std"]
categories = ["memory-management", "no-std"]

[features]
alloc = []
std = ["alloc", "dep:parking_lot"]
default = ["std"]
nightly = ["allocator-api2/nightly", "allocator-api2-tests/nightly", "bumpalo/allocator_api", "blink-alloc/nightly"]

[dependencies]
allocator-api2 = { version = "0.2.13" }
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
allocator-api2-tests = { version = "0.2.13" }
criterion = "0.4"
bumpalo = { version = "3.13", features = ["allocator-api2"] }
blink-alloc = { version = "0.3", features = ["sync"] }

[[bench]]
name = "bench"
harness = false
required-features = ["alloc"]
